--- a/lib/pelable_web/templates/project/index.html.eex
+++ b/lib/pelable_web/templates/project/index.html.eex
@@ -11,7 +11,7 @@
   <tbody>
 <%= for project <- @projects do %>
     <tr>
-      <td><%= project.name %></td>
+      <td><%= project.versions %></td>
 
       <td>
         <%= link "Show", to: Routes.project_path(@conn, :show, project) %>
