set colors and initial links for top menu

--- a/lib/pelable_web/templates/layout/app.html.eex
+++ b/lib/pelable_web/templates/layout/app.html.eex
@@ -24,10 +24,10 @@ function myFunction() {
       <section class="container">
         <nav role="navigation">
           <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a href="/projects" class="">Projects</a>
+  <a href="/chat">Chat</a>
   <a href="#about">About</a>
+  <a href="/dashboard"> My Dashboard </a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
