--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -144,7 +144,7 @@ header nav a {
 
  /* Add a black background color to the top navigation */
  .topnav {
-  background-color: #333;
+  background-color: #f1f1f1;
   overflow: hidden;
 }
 
@@ -152,7 +152,7 @@ header nav a {
 .topnav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #0069d9;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -167,7 +167,7 @@ header nav a {
 
 /* Add an active class to highlight the current page */
 .topnav a.active {
-  background-color: #4CAF50;
+  background-color: #0069d9;
   color: white;
 }
 
