make templates use @resp instead of @work_project

--- a/lib/pelable_web/templates/user_story/show.html.eex
+++ b/lib/pelable_web/templates/user_story/show.html.eex
@@ -3,8 +3,8 @@
 <ul>
 
   <li>
-    <strong>Body:</strong>
-    <%= @user_story.body %>
+    <strong>Title:</strong>
+    <%= @user_story.title %>
   </li>
 
 </ul>
