--- a/lib/pelable_web/templates/page/chat.html.eex
+++ b/lib/pelable_web/templates/page/chat.html.eex
@@ -1,1 +1,1 @@
-<h3> <a href="/landing"> Sign up</a> to join our community!</h3>
+<center> <h3> <a href="/landing"> Sign up</a> to join our community!</h3> </center>
