--- a/lib/pelable_web/templates/work_project/show.html.eex
+++ b/lib/pelable_web/templates/work_project/show.html.eex
@@ -4,7 +4,7 @@
 
   <li>
     <strong>Description:</strong>
-    <%=raw (@resp.work_project.description_html) %>
+    <%= raw (HtmlSanitizeEx.basic_html (@resp.work_project.description_html)) %>
   </li>
 
   <h4> User stories </h4>
