add times new roman font

--- a/lib/pelable_web/templates/layout/app.html.eex
+++ b/lib/pelable_web/templates/layout/app.html.eex
@@ -7,6 +7,11 @@
     <title>Start Building! - Welcome to the Pelable Community</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+p {
+  font-family: "Times New Roman", Times, serif;
+}
+  </style>
   </head>
   <body>
   <!--Start of Tawk.to Script-->
