--- a/lib/pelable_web/templates/chatroom/show.html.eex
+++ b/lib/pelable_web/templates/chatroom/show.html.eex
@@ -23,3 +23,16 @@
   </li>
 
 </ul>
+
+<div id="chat-box">
+<%= for message <- @messages do %>
+  <p><b><%= message.sender.username %>:</b> <%= message.body %></p>
+<% end %>
+</div>
+<%= form_for @conn, "#", [id: "chat-form"], fn f -> %>
+  <%= text_input f, :username, placeholder: "Username", id: "user-name" %>
+  <br>
+  <%= textarea f, :message, placeholder: "Your comment", id: "user-msg" %>
+  <br>
+  <%= submit "Post" %>
+<% end %>
