--- a/lib/pelable_web/templates/chatroom/show.html.eex
+++ b/lib/pelable_web/templates/chatroom/show.html.eex
@@ -1,3 +1,8 @@
+<script type="module">
+import socket from "../js/socket.js"
+import Chat from "../js/chat.js"
+Chat.init(socket)
+</script>
 <h1>Show Chatroom</h1>
 
 <ul>
