--- a/lib/pelable_web/templates/pow/registration/new.html.eex
+++ b/lib/pelable_web/templates/pow/registration/new.html.eex
@@ -10,11 +10,15 @@
   <%= label f, Pow.Ecto.Schema.user_id_field(@changeset) %>
   <%= text_input f, Pow.Ecto.Schema.user_id_field(@changeset) %>
   <%= error_tag f, Pow.Ecto.Schema.user_id_field(@changeset) %>
-
+<br><br>
+  <%= label f, :username %>
+  <%= text_input f, :username %>
+  <%= error_tag f, :username %>
+<br><br>
   <%= label f, :password %>
   <%= password_input f, :password %>
   <%= error_tag f, :password %>
-
+<br><br>
   <%= label f, :confirm_password %>
   <%= password_input f, :confirm_password %>
   <%= error_tag f, :confirm_password %>
