add link to general chatroom in all pages

--- a/lib/pelable_web/templates/layout/app.html.eex
+++ b/lib/pelable_web/templates/layout/app.html.eex
@@ -15,6 +15,7 @@ p {
   <script type="module">
 import socket from "../js/socket.js"
 import Chat from "../js/chat.js"
+import "../js/phoenix_html.js"
 Chat.init(socket)
 </script>
   </head>
@@ -42,22 +43,38 @@ function myFunction() {
   } else {
     x.className = "topnav";
   }
-} 
+}
+
+function logout() {
+  var url = "/session";
+  var xhr = new XMLHttpRequest();
+  xhr.open("DELETE", url, true);
+  xhr.onload = function () {
+	var response = JSON.parse(xhr.responseText);
+  console.log(Jason.encode!(Plug.CSRFProtection.get_csrf_token()))
+	if (xhr.readyState == 4 && xhr.status == "200") {
+		console.log(response);
+	} else {
+		console.error(response);
+	}
+}
+xhr.send(null);
+}
     </script>
       <section class="">
         <nav role="navigation">
           <div class="topnav" id="myTopnav">
   <a href="/projects" class="">Projects</a>
   <%= if Pow.Plug.current_user(@conn) do %>
-  <a href="/landing" class="">Sign out</a>
   <% else %>
   <a href="<%= Routes.pow_registration_path(@conn, :new) %>" class="">Sign up</a>
   <a href="<%= Routes.pow_session_path(@conn, :new) %>" class="">Login</a>
   <% end %>
-  <a href="/chat">Chat</a>
+  <a href="/chat/AZ3X37GsBebR">Chat</a>
   <a href="#about">About</a>
   <%= if Pow.Plug.current_user(@conn) do %>
   <a href="/#dashboard"> My Dashboard </a>
+  <span><%= link "Sign out", to: Routes.pow_session_path(@conn, :delete), method: :delete %></span>
   <% end %>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
