--- a/lib/pelable_web/templates/layout/app.html.eex
+++ b/lib/pelable_web/templates/layout/app.html.eex
@@ -71,7 +71,7 @@ xhr.send(null);
   <a href="<%= Routes.pow_session_path(@conn, :new) %>" class="">Login</a>
   <% end %>
   <a href="/chat/AZ3X37GsBebR">Chat</a>
-  <a href="#about">About</a>
+  <a href="/landing">About</a>
   <%= if Pow.Plug.current_user(@conn) do %>
   <a href="/#dashboard"> My Dashboard </a>
   <span><%= link "Sign out", to: Routes.pow_session_path(@conn, :delete), method: :delete %></span>
