--- a/lib/pelable_web/templates/pow/registration/new.html.eex
+++ b/lib/pelable_web/templates/pow/registration/new.html.eex
@@ -1,5 +1,6 @@
 <h1>Register</h1>
 
+Sign up to join the chat!
 <%= form_for @changeset, @action, [as: :user], fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
