--- a/lib/pelable_web/templates/chatroom/show.html.eex
+++ b/lib/pelable_web/templates/chatroom/show.html.eex
@@ -1,3 +1,17 @@
+<style>
+ #chat-box{
+   text-align:left;
+    margin:0 auto;
+    margin-bottom:25px;
+    padding:10px;
+    background:#fff;
+    height:270px;
+    width:430px;
+    border:1px solid #ACD8F0;
+    overflow:auto; }
+ }
+</style>
+
 <script type="module">
 import socket from "../js/socket.js"
 import Chat from "../js/chat.js"
