--- a/lib/pelable_web/templates/layout/app.html.eex
+++ b/lib/pelable_web/templates/layout/app.html.eex
@@ -13,9 +13,9 @@ p {
 }
   </style>
   <script type="module">
-import socket from "../js/socket.js"
-import Chat from "../js/chat.js"
-import "../js/phoenix_html.js"
+import socket from "<%= Routes.static_path(@conn, "/js/socket.js") %>"
+import Chat from "<%= Routes.static_path(@conn, "/js/chat.js") %>"
+import "<%= Routes.static_path(@conn, "/js/phoenix_html.js") %>"
 Chat.init(socket)
 </script>
   </head>
