--- a/lib/pelable_web/templates/work_project/show.html.eex
+++ b/lib/pelable_web/templates/work_project/show.html.eex
@@ -1,5 +1,5 @@
 <h2><%= @resp.work_project.name %></h2>
-<button> <%= link "Start Project", to: Routes.work_project_path(@conn, :start, @resp.work_project.slug, @resp.work_project.uuid), method: :post %></button>
+<button> <%= link "Start Project", to: Routes.work_project_path(@conn, :start, @resp.work_project.uuid), method: :post %></button>
 <ul>
 
   <li>
